# TaxFixMLPrediction

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  mypy.ini
inference_service/: main.py  pyproject.toml
inference_service/config/: config.yaml
inference_service/src/api/: dependencies.py  routes.py  server.py
inference_service/src/api/routes/: __init__.py  health.py  prediction.py
inference_service/src/core/: config.py  errors.py  models.py  security.py
inference_service/src/services/: model_loader.py  model_service.py  predictor.py
inference_service/src/utils/: logging.py
inference_service/tests/: test_end_to_end.py  test_errors.py  test_prediction.py  test_security.py
ml_pipeline/: pyproject.toml  train.py
ml_pipeline/config/: training_config.json
ml_pipeline/src/data/: __init__.py  loader.py
ml_pipeline/src/evaluation/: metrics.py
ml_pipeline/src/preprocessing/: categorical.py  numerical.py  pipeline.py
ml_pipeline/src/training/: classifier.py  pipeline.py
ml_pipeline/src/utils/: storage.py
ml_pipeline/tests/: test_categorical.py  test_classifier.py  test_data.py  test_integration.py  test_metrics.py  test_numerical.py  test_pipeline.py  test_storage.py
ml_pipeline/tests/ml_pipeline/: __init__.py
ml_pipeline/tests/ml_pipeline/data/: __init__.py  test_loader.py
ml_pipeline/tests/resources/: sample.csv
