[tool.poetry]
name = "ml_pipeline"
version = "0.1.0"
description = "ML pipeline package"
authors = ["Stefan Skoruppa <Stefan.sko@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_pipeline"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.1"
scikit-learn = "^1.3.2"
numpy = "^1.26.0"
boto3 = "^1.28.62"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ruff = "^0.1.0"
mypy = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 